# Anchor

./: .anchorignore  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  MEMORY.md  README.md  anchor-explained.md  install.sh  local_install.sh  product-idea.md
.github/workflows/: ci.yml
benchmark/: README.md  config.json  profiles.example.json  profiles.json  results.swebench.jsonl  run.py  score_results.py  swebench.py  tasks.example.jsonl  tasks.swebench.jsonl
docs/: install.sh  uninstall.sh
documents/: v0.md
src/: config.rs  error.rs  lib.rs  mcp.rs  updater.rs  write.rs
src/blueprint/: mod.rs  types.rs
src/cli/: daemon.rs  init.rs  mod.rs  plan.rs  read.rs  write.rs
src/daemon/: mod.rs  protocol.rs  server.rs
src/graph/: builder.rs  engine.rs  mod.rs  mutation.rs  persistence.rs  query.rs  types.rs
src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs
src/lock/: guard.rs  manager.rs  mod.rs  types.rs  write.rs
src/mcp/: format.rs  mod.rs  (+2 more)
tasks/: todo.md
tests/: integration_batch_write.rs  integration_context.rs  integration_graphql.rs  integration_write.rs  integration_write_ordered.rs  test_integration_batch_write.rs  test_integration_context.rs  test_integration_graph.rs  test_integration_graph_advanced.rs  test_integration_graphql.rs  test_integration_languages.rs  test_integration_lock.rs  test_integration_parser.rs  test_integration_parser_edge_cases.rs  test_integration_query.rs  test_integration_rebuild.rs  test_integration_regex.rs  test_integration_write.rs  test_integration_write_ordered.rs  validata.rs
(+39 files in other folders)
